fix spacing on cards

--- a/src/applications/disability-benefits/2346/sass/form-2346.scss
+++ b/src/applications/disability-benefits/2346/sass/form-2346.scss
@@ -36,6 +36,18 @@
   padding: 21px;
 }
 
+.vads-u-padding-top--21 {
+  padding-top: 21px;
+}
+
+.vads-u-padding-bottom--21 {
+  padding-bottom: 21px;
+}
+
+.vads-u-padding-x--21 {
+  padding-left: 21px;
+  padding-right: 21px;
+}
 .vads-u-max-width--226 {
   max-width: 226px;
 }
